--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "simulator": "expo run:ios",
+    "start:devclient": "expo start --dev-client",
+    "start:devclient:ios": "expo start --dev-client --ios",
+    "start:ios": "expo start --dev-client --ios",
+    "pod-install": "npx pod-install ios",
     "web": "expo start --web"
   },
   "dependencies": {
